# me-weather

./: .gitignore  Caddyfile  GPU_SOLVER.md  LICENSE  README.md  STRIDE.md  TESTING.md  WEBRTC_CADDY_SETUP.md  docker-compose.yml  hostconfig.json  index.html  package-lock.json  package.json  rebase_editor.sh  scylla.yaml  test.mjs  vite.config.js
.agents/rules/: license-headers.md  puppeteer-cleanup.md
.agents/skills/clean-docker/: SKILL.md
rust-engine/: Cargo.toml
rust-engine/gateway/: Cargo.toml
rust-engine/gateway/src/: main.rs
rust-engine/physics/: Cargo.toml
rust-engine/physics/src/: collider.rs  lib.rs  octree.rs
rust-engine/physics/tests/: physics_integration.rs
rust-engine/server/: Cargo.toml
rust-engine/server/src/: cluster.rs  main.rs
rust-engine/server/tests/: cluster_integration.rs  server_integration.rs  snapshot_integration.rs  test_scylla.rs
rust-engine/tile-server/: Cargo.toml
rust-engine/tile-server/src/: lib.rs  main.rs
rust-engine/wasm-math/: Cargo.toml
rust-engine/webrtc-router/: Cargo.toml
server/: build_tiles.py  generate_flowmap.py  height_extractor.py  hydrology.py  main.py  physics_solver.py  requirements.txt  test_api.py  test_physics.py
server/assets/: .gitkeep
src/: TerrainCuller.js  acoustics.js  cull.wgsl  landmarks.js  main.js  particles.js  physics.js  renderer.js  style.css  terrain.js  tessellate.wgsl  ui.js
src/workers/: culling_worker.js
test-results/: .last-run.json
test-results/tests-e2e-Babylon-js-WebGP-19794--streams-native-float-array/: error-context.md
tests/: e2e.spec.js  limits.mjs  test_playwright.mjs  test_webgl.mjs
tests/e2e/: capture_logs.js  capture_logs_webgl.js  check_logs.cjs  puppeteer_test.js  puppeteer_test.mjs  puppeteer_zoom_test.js
tests/unit/: test-frustum.mjs  test-frustum2.mjs  test-radius.mjs  test_ground.js  test_heightmap.js  test_particles.js  test_tiles.js
(+6 files in other folders)
