[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.52.3", features = ["full"] }
tile-server = { path = "../tile-server" }
webrtc-router = { path = "../webrtc-router" }
physics = { path = "../physics" }
